src/objects/TASKRAY__trTaskNotification__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object which has been deprecated.</description>
    <fields>
        <fullName>TASKRAY__EventDescr__c</fullName>
        <label>Event Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Task2__c</fullName>
        <externalId>true</externalId>
        <label>Project Task</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Task__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Task Notifications</relationshipLabel>
        <relationshipName>TaskRay_Task_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Task Notification</label>
    <nameField>
        <label>TaskRay Task Notification Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>